[gd_scene load_steps=2 format=3 uid="uid://do57hfqasnkkh"]

[ext_resource type="Script" path="res://ui/hud_character_view.gd" id="1_xuorh"]

[node name="HudCharacterView" type="PanelContainer"]
offset_right = 167.0
offset_bottom = 66.0
script = ExtResource("1_xuorh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Character Id + Name"

[node name="ConfigContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ConfigureBehaviorButton" type="Button" parent="MarginContainer/VBoxContainer/ConfigContainer"]
layout_mode = 2
text = "Configure Behavior"

[node name="ReadyButton" type="CheckButton" parent="MarginContainer/VBoxContainer/ConfigContainer"]
layout_mode = 2
text = "Ready"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ConfigContainer/ConfigureBehaviorButton" to="." method="_on_configure_behavior_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/ConfigContainer/ReadyButton" to="." method="_on_ready_button_toggled"]
